--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "webby",
   "version": "0.1.0",
+  "homepage" : "https://webby-social.heroku.com",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
