--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "d3": "^7.6.1",
     "firebase": "^9.9.2",
     "react": "^18.2.0",
+    "react-d3-tree": "^3.3.4",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
