--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "engines": {
     "npm": ">=7.0.0",
-    "node": ">=16.0.0"
+    "node": "16.x"
   },
   "dependencies": {
     "@emotion/react": "^11.10.0",
@@ -31,8 +31,7 @@
   },
   "scripts": {
     "start": "node --max_old_space_size=2560 node_modules/.bin/react-scripts start",
-  "build": "node --max_old_space_size=2560 node_modules/.bin/react-scripts build",
-  
+    "build": "node --max_old_space_size=2560 node_modules/.bin/react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
