Firebase - Seed file complete! (#83)
* WIP: Seed data

* Seed file infinite loop resolved

* user data seeding

* Seed file checks if an interest exists before adding it

* Removed commented code

* Added test data, added route to Graph

* Committing so that I can switch to a branch to test react-d3-tree

* Working chart

* Fixed file structure

* Graph is now circular

* resolved merge

* Update Routes.js

* Update App.js

* Update App.js

* Updated seed file to include interestId

* Firebase uses a junction table now instead of storing user interests as strings

Co-authored-by: Noelle Huchette <50929232+noellehuchette@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "homepage": "https://webby-social.heroku.com",
   "private": true,
+  "type": "module",
   "engines": {
     "npm": ">=7.0.0",
     "node": "16.x"
@@ -56,6 +57,7 @@
     ]
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.4.0",
     "gh-pages": "^4.0.0"
   }
 }
