--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webby",
   "version": "0.1.0",
-  "homepage": "https://webby-social.heroku.com",
+  "homepage": "https://them-exclamationpoint.github.io/Webby/",
   "private": true,
   "engines": {
     "npm": ">=7.0.0",
